<resources>
    <string name="app_name">lecmore</string>
    <string name="feedback_admin_title">Feedback Admin</string>
    <string name="new_feedback">New Feedback</string>
    <string name="view_feedbacks">View Feedbacks</string>
    <string name="create_new_feedback">Create New Feedback</string>
    <string name="subject">Subject</string>
    <string name="lecture_number">Lecture No.</string>
    <string name="lecture_date">Lecture Date</string>
    <string name="lecturer_note">Lecturer\'s Note</string>
    <string name="optional">Optional</string>
    <string name="public_text">Public</string>
    <string name="create">Create</string>
    <string name="feedback_history">Feedback History</string>
    <string name="mobile_computing">COMP30018 Mobile Computing</string>
    <string name="mobile_comp">COMP90018 Mobile Computing</string>
    <string name="lec_more">Lecture More</string>
    <string name="feedback_admin">Feedback Admin</string>
    <string name="date_hint">yyyy/mm/dd</string>
    <string name="feedback_student">Feedback Student</string>
    <string name="lec_view">Lecture View</string>
    <string name="string_hi">Hi!</string>
    <string name="feedback_lecture_selection_student">Please select a lecture session before continue</string>
    <string name="student_staff">Student / Staff</string>
    <string name="student">Student</string>
    <string name="staff">Staff</string>
    <string name="username">Username:</string>
    <string name="enter_your_username_here">Enter your username here.</string>
    <string name="password">Password:</string>
    <string name="enter_your_password_here">Enter your password here.</string>
    <string name="loginBtn">Login</string>
    <string name="have_not_registered_yet"><u>Have not registered yet? Do it now.</u></string>
    <string name="school_email">School Email:</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="enter_your_password_again_here">Enter your password again here.</string>
    <string name="registerBtn">Register</string>
    <string name="go">Go</string>
    <string name="username_hint_empty">Username cannot be empty.</string>
    <string name="password_hint_empty">Password cannot be empty.</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="do_questionare">Do questionare</string>
    <string name="enter_your_email_here">Enter your email here.</string>
    <string name="hint_info">Below is subjects you are currently into. <b><u>You need to select a subject before further operation.</u></b></string>
    <string name="subject_code">Subject Code</string>
    <string name="current_rating">Current Rating</string>
    <string name="random_number">4</string>
    <string name="outof_5"> / 5</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="feedback">Feedback</string>
    <string name="create_new_feedback_session">Create New Feedback</string>
    <string name="selection_instruction">Or selection a lecture to view the feedbacks</string>
    <string name="create_new_qs">Create New Questionnaire</string>
    <string name="q_selection_instruction">Or select a lecture below to view answers from students</string>
    <string name="lec_no_hint">double digit lecture number</string>
    <string name="create_new_questionnaire">Create New Questionnaire</string>
    <string name="one_label">1.</string>
    <string name="create_text">CREATE</string>
    <string name="enter_your_question_here">Enter your question here</string>
    <string name="add_new">add new</string>
    <string name="two_label">2.</string>
    <string name="three_label">3.</string>
    <string name="x">X</string>
    <string name="question_label">Q.</string>
    <string name="lec_topic">Lecture Topic</string>
    <string name="feedback_admin_instruction">Please select a lecture session to view or create new feedbacks</string>
    <string name="question_admin_instruction">Please select a lecture session to view or create new questionnaires</string>
    <string name="sign_out">Sign out</string>
    <string name="lec_note_hint">Lecture Notes (Optional)</string>
    <string name="view_or_create">View / Create</string>
    <string name="back_to_lecture">Back to Lecture Menu</string>
    <string name="look_up_subject">Looking For Other Subjects?</string>
    <string name="enter_subject_code">Enter Full Subject Code Here</string>
    <string name="feedback_text">Feedback Text</string>
    <string name="search_back_to_subject_selection">Home</string>
    <string name="write_your_answer_here">Write your answer here.</string>
    <string name="submit">Submit</string>
    <string name="view_answers_from_other_students">View answers from other students</string>
    <string name="upvote_symbol">^</string>
    <string name="answer_it_now">Answer it now</string>
</resources>
