<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/feedback_admin_instruction_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_admin_instruction" />

    <Spinner
        android:id="@+id/lecture_spinner"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:background="@drawable/spinner_border" />

    <TextView
        android:id="@+id/feedback_admin_subject_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/subject_code"
        android:gravity="center"/>

    <TextView
        android:id="@+id/feedback_admin_lec_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/lecture_number" />

    <TextView
        android:id="@+id/feedback_admin_lec_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lecture_date"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <MultiAutoCompleteTextView
        android:id="@+id/feedback_admin_lec_note"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/lec_note_hint"
        android:visibility="gone"/>

    <Button
        android:id="@+id/feedback_admin_proceed_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_or_create" />

</LinearLayout>