<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <Button
                android:layout_width="16dip"
                android:layout_height="8dip"
                android:layout_marginLeft="12dip"
                android:layout_marginRight="12dip"
                android:layout_marginTop="4dip"
                android:background="@drawable/vote_up"
                android:id="@+id/vote_up_btn"/>

            <TextView
                android:id="@+id/vote_num"
                android:layout_width="40dip"
                android:layout_height="32dip"

                android:singleLine="true"
                android:ellipsize="marquee"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="0"/>
        </LinearLayout>

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school_email"
            android:paddingTop="10dp">

        </TextView>
    </LinearLayout>



    <EditText
        android:id="@+id/edit_answer"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:inputType="text|textMultiLine"
        android:gravity="top"
        android:hint="@string/write_your_answer_here"
        />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit">
    </Button>

    <Button
        android:id="@+id/viewAnswersBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_answers_from_other_students">
    </Button>
</LinearLayout>