<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_subject_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter_subject_code"
            android:inputType="textPersonName" />

        <ImageButton
            android:id="@+id/search_subject_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            app:srcCompat="@android:drawable/ic_search_category_default" />
    </LinearLayout>

    <TextView
        android:id="@+id/search_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <Button
        android:id="@+id/subject_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button" />

    <TextView
        android:id="@+id/search_feedback_text"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/feedback_text" />

    <Button
        android:id="@+id/search_back_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/search_back_to_subject_selection" />
</LinearLayout>