<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/fragment_container"
    android:paddingTop="10dp"
    android:background="#FEDBD0"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcomeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:background="#FEDBD0"
        android:textColor="#ffffff"
        android:typeface="serif"
        android:textSize="30sp">

    </TextView>
    <TextView
        android:id="@+id/instructionInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp">

    </TextView>

    <TextView
        android:id="@+id/hintInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="serif"
        android:text="@string/hint_info"
        android:padding="4dp">

    </TextView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lectures_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="263dp"
        android:background="#fdf8f0"
        android:typeface="serif"
        android:padding="4dp" />


    <Button
        android:id="@+id/search_for_more_subject_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FEEAE6"
        android:textColor="#000000"
        android:typeface="serif"
        android:text="@string/look_up_subject" />

    <Button
        android:id="@+id/signoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#442C2E"
        android:typeface="serif"
        android:textColor="#ffffff"
        android:text="@string/sign_out">

    </Button>
</LinearLayout>