<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/question_admin_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/new_question_title"
                style="@style/FeedbackTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/create_new_questionnaire" />

            <TextView
                android:id="@+id/question_admin_subject_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subject_code"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/question_admin_lec_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/lecture_number" />

                <TextView
                    android:id="@+id/lecture_number_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lecture_number" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_q1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question_label" />

                <EditText
                    android:id="@+id/text_q1"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginEnd="70dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/enter_your_question_here"
                    android:inputType="textMultiLine" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/label_q2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question_label" />

                <EditText
                    android:id="@+id/text_q2"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/enter_your_question_here"
                    android:inputType="textMultiLine" />

                <ImageButton
                    android:id="@+id/delete_button_q2"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_weight="0"
                    android:layout_gravity="center"
                    app:srcCompat="@android:drawable/ic_delete" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_q3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/label_q3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question_label" />

                <EditText
                    android:id="@+id/text_q3"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/enter_your_question_here"
                    android:inputType="textMultiLine" />

                <ImageButton
                    android:id="@+id/delete_button_q3"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_weight="0"
                    android:layout_gravity="center"
                    app:srcCompat="@android:drawable/ic_delete" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|top"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/new_question_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/add_new"
                    app:srcCompat="@android:drawable/ic_input_add" />
            </LinearLayout>

            <Button
                android:id="@+id/new_question_submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_text" />

        </LinearLayout>


    </ScrollView>



</LinearLayout>