<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/title_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/feedback_admin_title"
            style="@style/FeedbackTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/custom_font"
            android:text="@string/feedback_admin_title" />

        <View
            style="@style/Divider"
            android:layout_height="1dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="342dp"
        android:layout_height="456dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_box">

        <Button
            android:id="@+id/view_feedback_button"
            style="@style/MainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_feedbacks" />

        <View
            style="@style/Divider"
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/new_feedback_button"
            style="@style/MainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/new_feedback" />

        <View
            style="@style/Divider"
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/database_test"
            style="@style/MainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Other Functionalities" />

        <View
            style="@style/Divider"
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_gravity="center"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>